# eyetor

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN_MODELOS_LOCALES.md  README.md  docker-compose.yml  pyproject.toml  sesiones_claude.md
agents/: researcher.md  sysadmin.md
config/: default.yaml
plugins/result-cache/: config.json  plugin.json
plugins/telegram-alerts/: config.json  plugin.json
podman/: README.md  eyetor-agent.container  eyetor-data.volume  eyetor-telegram.container  setup.sh
scripts/: eval_local.py
skills/browser/: SKILL.md
skills/filesystem/: SKILL.md
skills/google-workspace/: SKILL.md
skills/hyprland-commands/: SKILL.md
skills/shell/: SKILL.md
skills/shopping/: SKILL.md
skills/web-search/: SKILL.md
src/eyetor/: __init__.py  __main__.py  _sqlite_util.py  access.py  cli.py  config.py  host_info.py  (+2 more)
tests/: test_access.py  test_access_session.py  test_chatlog_store.py  test_compaction_preemptive.py  test_fallback_provider.py  test_fs_resolve.py  test_host_info.py  test_is_asking_user.py  test_json_routing.py  test_kb_expiry.py  test_kb_read.py  test_llamacpp_payload.py  test_ollama_payload.py  test_provider_parsing_payload.py  test_scaffolding_leak.py  test_session_reasoning_fallback.py  test_shell_skill.py  test_shopping_receipt.py  test_skill_registry.py  test_skill_router.py  test_skill_summary.py  test_telegram_caption_date.py  test_telegram_document.py  test_telegram_image_prompt.py  test_textual_tool_calls.py  test_tool_gating.py  test_tool_intent.py  test_tracking_context.py  test_tracking_provider.py  test_tracking_store.py  test_transcription_config.py  test_usage_format.py
windows/: install-service.ps1  uninstall-service.ps1
(+108 files in other folders)
