[project]
name = "eyetor"
version = "0.1.0"
description = "Multi-agent AI system based on Anthropic's agent patterns"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
telegram = ["aiogram>=3.0"]
# Knowledge base — binary document extractors (PDF/DOCX/XLSX/PPTX)
knowledge = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]
# Knowledge base — semantic retrieval (local embeddings + vector store)
knowledge-vector = [
    "fastembed>=0.3",
    "sqlite-vec>=0.1",
]
# Convenience: everything the knowledge base can use
knowledge-full = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "fastembed>=0.3",
    "sqlite-vec>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eyetor"]

[project.scripts]
eyetor = "eyetor.cli:main_sync"
